# moonbox

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/moonbox-theme/: Cargo.toml
crates/moonbox-theme/src/: lib.rs
docs/: session-action-roadmap.md  session-management-questions.md
docs/release/: homebrew.md
docs/release/homebrew/: moonbox.rb
fixtures/adapters/claude/: sessions.json  timeline-claude-qc-platform.json
fixtures/adapters/codex/: sessions.json  timeline-codex-cxcp-design.json
fixtures/adapters/hermes/: sessions.json  timeline-hermes-cxcp-502.json
scripts/ci/: cli-smoke.sh  docs-assets-smoke.sh  full-gate.sh  homebrew-docs-smoke.sh  install-smoke.sh  package-hygiene.sh  release-artifacts-smoke.sh  supply-chain.sh
scripts/release/: stage-artifacts.sh
src/: app.rs  cli.rs  lib.rs  main.rs  theme_pack.rs
src/core/: actions.rs  adapter.rs  anatomy.rs  builtin_handoff_skill.md  capability.rs  capsule_store.rs  claude.rs  codex.rs  codex_app_server.rs  compiler.rs  config.rs  continuation.rs  data.rs  dataspace.rs  demo.rs  doctor.rs  error.rs  fixture.rs  handoff.rs  hermes.rs  hooks.rs  image_preview.rs  lark.rs  launch_ledger.rs  launcher.rs  local_jsonl.rs  mod.rs  model.rs  model_context.rs  redaction.rs  replay_eval.rs  setup.rs  snapshot.rs  sources.rs  ssh.rs  tmux.rs  verifier.rs  workbench.rs
src/tui/: i18n.rs  mod.rs  snapshot.rs  theme.rs  view.rs
tests/: cli_contract.rs
