[package]
name = "moonbox"
version = "0.1.5-beta.46"
edition = "2024"
default-run = "moonbox"
description = "Cross-CLI session rewind workbench"
license = "MIT"
repository = "https://github.com/Gunsio/moonbox"
homepage = "https://github.com/Gunsio/moonbox"
readme = "README.md"
keywords = ["cli", "tui", "ai", "handoff", "session"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.88"
include = [
  "/Cargo.lock",
  "/Cargo.toml",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/fixtures/**",
  "/src/**",
  "/tests/**",
]

[workspace]
members = ["crates/moonbox-theme"]
resolver = "3"

[[bin]]
name = "moon"
path = "src/bin/moon.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
color-eyre = "0.6"
crossterm = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
ratatui = "0.30"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "0.3"
